--- a/css/blog/blog.css
+++ b/css/blog/blog.css
@@ -1,3 +1,13 @@
+/* webkit, opera, IE9 */  
+::selection {
+    background:lightblue;
+    color: whitesmoke;
+}   
+/* mozilla firefox */  
+::-moz-selection {
+    background:lightblue;
+    color: whitesmoke;
+}   
 @media screen and (min-width:1200px){
     .blog_main{
         width: 1000px;
@@ -6,12 +16,21 @@
         overflow:auto;
     }
     .blog_content{
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-left: 20px;
+        margin:10px 20px;
         float: left;
         font-family: "Helvetica Neue", Helvetica, Arial,'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
-        box-shadow: 0px 0px 1px #ddd; 
+        box-shadow: 0px 0px 1px #bbb; 
+        /*Mozilla内核*/
+        -moz-transition:all 0.2s ease;
+        /*Webkit内核*/
+        -webkit-transition:all 0.2s linear;
+        /*Opera*/
+        -o-transition:all 0.2s linear;
+        /*W3C 标准*/
+        transition:all 0.5s ease;
+    }
+    .blog_content:hover{
+        box-shadow: 0px 0px 3px #e9e9e9; 
     }
     .blog_rightmenu i{
         color: #ddd;
@@ -27,13 +46,14 @@
         /*Opera*/
         -o-transition:all 0.2s linear;
         /*W3C 标准*/
-        transition:all 0.5s ease;
+        transition:all 0.3s ease;
     }
     .blog_rightmenu i:hover{
         
         border-color:blueviolet;
         cursor: pointer;
         color: blueviolet;
+        box-shadow: 0px 0px 1px blueviolet; 
         
     }
     
@@ -350,18 +370,10 @@
         float: left;
         color: #666;
     }
-    .review_r_time span{
-        /*Mozilla内核*/
-        -moz-transition:color 0.2s linear;
-        /*Webkit内核*/
-        -webkit-transition:color 0.2s linear;
-        /*Opera*/
-        -o-transition:color 0.2s linear;
-        /*W3C 标准*/
-        transition:color 0.2s linear;
-        
-    }
     .review_r_time i{
+        font-size: 13px;
+    }
+    .review_r_time a{
         /*Mozilla内核*/
         -moz-transition:color 0.2s linear;
         /*Webkit内核*/
@@ -370,15 +382,11 @@
         -o-transition:color 0.2s linear;
         /*W3C 标准*/
         transition:color 0.2s linear;
-        font-size: 13px;
     }
     
-    .review_r_time span:hover{
+    .review_r_time a:hover{
+        text-decoration: none;
         color: coral;
-    }
-    .review_r_time i:hover{
-        color: coral;
-        font-size: 13px;
     }
     
     .blog_right:hover{
