--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@ body{
     background-color: #eff3f5;
 }
 .b-navibar{
-    background-color: #584B4F;
+    background-color: #f7f7f7;
+    box-shadow: 0px 0px 30px #e2e2e2 inset;
 }
 .b-navibar-main{
     margin: 0 auto;
@@ -19,8 +20,7 @@ body{
 
 /***********导航栏左边样式开始*****************/
 .b-navibar-left{
-    width: 500px;
-    line-height: 56px;
+    line-height: 60px;
     float: left;
 }
 .b-navibar-ll{
@@ -28,10 +28,9 @@ body{
     margin-right: 20px;
 }
 .b-navibar-ll a{
-    color: #eff3f5;
+    color: #666;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
-    font-size: large;
-    border-bottom: 2px solid #eff3f5;
+    font-size: 20px;
     
     /*Mozilla内核*/
     -moz-transition:color 0.3s ease-in-out;
@@ -49,14 +48,12 @@ body{
 }
 .b-navibar-lr{
     text-align: center;
-    width: 250px;
     float: left;
 }
 .b-navibar-lr a{
-    font-size: 14px;
-    line-height: 56px;
-    color: #eff3f5;
-	font-family: "Arial","YouYuan","黑体","宋体",sans-serif;
+    line-height: 60px;
+    color:#a2a2a2;
+    font-family: "PingFang SC","Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Microsoft Yahei","微软雅黑",STHeiti,"华文细黑",sans-serif;
     
     /*Mozilla内核*/
     -moz-transition:color 0.3s ease-in-out;
@@ -68,14 +65,14 @@ body{
     transition:color 0.3s ease-in-out;
 }
 .b-navibar-lr a:hover{
-    color: deepskyblue;
+    color: black;
     text-decoration: none;
     cursor: pointer;
 }
-.b-navibar-index{
+.b-navibar-a{
     float: left;
-    margin-right: 10px;
-    border: 2px solid #584B4F;
+    margin: 0px 15px;
+    font-size: 13px;
     
     /*Mozilla内核*/
     -moz-transition:border 0.3s ease-in-out;
@@ -86,30 +83,7 @@ body{
     /*W3C 标准*/
     transition:border 0.3s ease-in-out;
 }
-.b-navibar-index:hover{
-    border-top: 2px solid deepskyblue;
-    border-bottom: 2px solid deepskyblue;
-    color: deepskyblue;
-    cursor: pointer;
-}
-.b-navibar-system{
-    float: left;
-    line-height: 56px;
-    border: 2px solid #584B4F;
-    
-    /*Mozilla内核*/
-    -moz-transition:border 0.3s ease-in-out;
-    /*Webkit内核*/
-    -webkit-transition:border 0.3s ease-in-out;
-    /*Opera*/
-    -o-transition:border 0.3s ease-in-out;
-    /*W3C 标准*/
-    transition:border 0.3s ease-in-out;
-}
-.b-navibar-system:hover{
-    color: deepskyblue;
-    border-top: 2px solid deepskyblue;
-    border-bottom: 2px solid deepskyblue;
+.b-navibar-a{
     cursor: pointer;
 }
 /***********导航栏左边样式结束*****************/
@@ -118,8 +92,7 @@ body{
 /***********导航栏右边样式开始*****************/
 
 .b-navibar-right{
-    width: 500px;
-    float: left;
+    float: right;
 }
 
 .b-navibar-r-form{
@@ -135,15 +108,14 @@ body{
 .b-navibar-r-input{
     width: 200px;
     height: auto;
-    border:solid 1px #ddd;  
+    border:solid 1px #b2b2b2;  
     border-radius: 20px;  
     -webkit-border-radius: 20px;  
     -moz-border-radius: 20px;  
     -khtml-border-radius: 20px;
-    float: right;
+    float: left;
     background-color: white;
     margin-top: 16px;
-    margin-right: 60px;
 }
 
 .span_icon i{
@@ -166,6 +138,7 @@ body{
     cursor: pointer;
 }
 .searchText{
+    font-size: 12px;
 	font-family: "Arial","YouYuan","黑体","宋体",sans-serif;
     border: none;
     width: 140px;
@@ -173,95 +146,6 @@ body{
     outline: 0 none;
     float: left;
 }
-
-.b-navibar-r-blog{
-    margin-right: 5px;
-    float: right;
-    border: 2px solid #584B4F;
-    line-height: 56px;
-    /*Mozilla内核*/
-    -moz-transition:border 0.3s ease-in-out;
-    /*Webkit内核*/
-    -webkit-transition:border 0.3s ease-in-out;
-    /*Opera*/
-    -o-transition:border 0.3s ease-in-out;
-    /*W3C 标准*/
-    transition:border 0.3s ease-in-out;
-}
-.b-navibar-r-blog:hover{
-    border-bottom: 2px solid deepskyblue;
-    border-top: 2px solid deepskyblue;
-    cursor: pointer;
-}
-.b-navibar-r-share{
-    margin-right: 5px;
-    float: right;
-    border: 2px solid #584B4F;
-    line-height: 56px;
-    
-    /*Mozilla内核*/
-    -moz-transition:border 0.3s ease-in-out;
-    /*Webkit内核*/
-    -webkit-transition:border 0.3s ease-in-out;
-    /*Opera*/
-    -o-transition:border 0.3s ease-in-out;
-    /*W3C 标准*/
-    transition:border 0.3s ease-in-out;
-}
-.b-navibar-r-share:hover{
-    border-bottom: 2px solid deepskyblue;
-    border-top: 2px solid deepskyblue;
-    cursor: pointer;
-}
-.b-navibar-r-leftmessage{
-    float: right;
-    border: 2px solid #584B4F;
-    line-height: 56px;
-    
-    /*Mozilla内核*/
-    -moz-transition:border 0.3s ease-in-out;
-    /*Webkit内核*/
-    -webkit-transition:border 0.3s ease-in-out;
-    /*Opera*/
-    -o-transition:border 0.3s ease-in-out;
-    /*W3C 标准*/
-    transition:border 0.3s ease-in-out;
-}
-.b-navibar-r-leftmessage:hover{
-    border-bottom: 2px solid deepskyblue;
-    border-top: 2px solid deepskyblue;
-    cursor: pointer;
-}
-
-.b-navibar-right a{
-    line-height: 33px;
-    font-size: 14px;
-    color: #eff3f5;
-	font-family: "Arial","YouYuan","黑体","宋体",sans-serif;
-   
-    
-    /*Mozilla内核*/
-    -moz-transition:color 0.3s ease-in-out;
-    /*Webkit内核*/
-    -webkit-transition:color 0.3s ease-in-out;
-    /*Opera*/
-    -o-transition:color 0.3s ease-in-out;
-    /*W3C 标准*/
-    transition:color 0.3s ease-in-out;
-}
-.b-navibar-right a:hover{
-    color: deepskyblue;
-    text-decoration: none;
-    cursor: pointer;
-}
-.b-navibar-right p{
-    line-height: 35px;
-    float: left;
-    color: #eff3f5;
-	font-family: "Arial","YouYuan","黑体","宋体",sans-serif;
-}
-
-
 
 /***********导航栏右边样式结束*****************/
 .b-content{
