--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ iframe{
 }
 .b-navibar-ll{
     float: left;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 .b-navibar-ll a{
     color: #666;
@@ -51,6 +51,7 @@ iframe{
     cursor: pointer;
 }
 .b-navibar-lr{
+    margin-left: 50px;
     text-align: center;
     float: left;
 }
@@ -75,7 +76,7 @@ iframe{
 }
 .b-navibar-a{
     float: left;
-    margin: 0px 15px;
+    margin-right: 30px;
     font-size: 13px;
     
     /*Mozilla内核*/
